--- a/Learnings/Dec2020/BasicFullStack/index.html
+++ b/Learnings/Dec2020/BasicFullStack/index.html
@@ -12,6 +12,7 @@
             <ul> 
                 <li> <a href="HW1.html">Homework 01</a> </li>
                 <li> <a href="HW2.html">Homework 02</a> </li>
+                <li> <a href="HW3.html">Homework 03 -- Nov 24th</a> </li>
             </ul>
             
         </div>
