--- a/Learnings/Dec2020/BasicFullStack/index.html
+++ b/Learnings/Dec2020/BasicFullStack/index.html
@@ -10,9 +10,10 @@
         <div class="nav">
             <h3>Homework Navigation:</h3>
             <ul> 
-                <li> <a href="HW1.html">Homework 01</a> </li>
-                <li> <a href="HW2.html">Homework 02</a> </li>
+                <!-- <li> <a href="HW1.html">Homework 01</a> </li>
+                <li> <a href="HW2.html">Homework 02</a> </li> -->
                 <li> <a href="HW3.html">Homework 03 -- Nov 24th</a> </li>
+                <li> <a href="HW4/HW4.html">Homework 04</a> </li>
             </ul>
             
         </div>
