--- a/Learnings/Dec2020/BasicFullStack/HW4/HW4.html
+++ b/Learnings/Dec2020/BasicFullStack/HW4/HW4.html
@@ -3,7 +3,7 @@
         <title>
             Home work04
         </title>
-        <link rel="stylesheet" href="HW4.css">
+        <link rel="stylesheet" href="css/HW4.css">
     </head>
     <body>
         <div class="wrapper">
@@ -15,10 +15,11 @@
                 <a href="hw4_about.html">About</a>
                 <a href="hw4_gallery.html">Gallery</a>
                 <a href="hw4_contact.html">Contact</a>
+                <a href="hw5_minical.html">Calculator</a>
             </div>
             <div class="content">
                     <h3>Triathlon</h4>
-                    <img class="photo" src="image01.jpg" alt="image01">
+                    <img class="photo" src="photos/image01.jpg" alt="image01">
                     <p class="detail">
                         A triathlon is an endurance multisport race consisting of swimming, cycling, <br>
                         and running over various distances. Triathletes compete for fastest overall completion time, <br>
