--- a/Learnings/Dec2020/BasicFullStack/HW4/hw4_contact.html
+++ b/Learnings/Dec2020/BasicFullStack/HW4/hw4_contact.html
@@ -3,7 +3,7 @@
         <title>
             HW4 Contact
         </title>
-        <link rel="stylesheet" href="HW4.css">
+        <link rel="stylesheet" href="css/HW4.css">
     </head>
     <body>
         <div class="wrapper">
