--- a/Learnings/Dec2020/BasicFullStack/HW4/hw4_gallery.html
+++ b/Learnings/Dec2020/BasicFullStack/HW4/hw4_gallery.html
@@ -3,7 +3,7 @@
         <title>
             HW4 Gallery
         </title>
-        <link rel="stylesheet" href="HW4.css">
+        <link rel="stylesheet" href="css/HW4.css">
     </head>
     <body>
         <div class="wrapper">
@@ -14,14 +14,14 @@
                     <h3>Some of images about different Events & Great Person:</h3>
                     <table class="gallery">
                         <tr>
-                            <td><img class="gallery" src="photo01.jpg" alt="text"></td>
-                            <td><img class="gallery" src="photo02.jpg" alt="text"></td>
-                            <td><img class="gallery" src="photo03.jpg" alt="text"></td>
+                            <td><img class="gallery" src="photos/photo01.jpg" alt="text"></td>
+                            <td><img class="gallery" src="photos/photo02.jpg" alt="text"></td>
+                            <td><img class="gallery" src="photos/photo03.jpg" alt="text"></td>
                         </tr>
                         <tr>
-                            <td><img class="gallery" src="photo04.jpg" alt="text"></td>
-                            <td><img class="gallery" src="photo05.jpg" alt="text"></td>
-                            <td><img class="gallery" src="photo06.jpg" alt="text"></td>
+                            <td><img class="gallery" src="photos/photo04.jpg" alt="text"></td>
+                            <td><img class="gallery" src="photos/photo05.jpg" alt="text"></td>
+                            <td><img class="gallery" src="photos/photo06.jpg" alt="text"></td>
                         </tr>
                     </table>
                     <a href="HW4.html">back</a>
